settlement for group
